<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="email_hint">E-Mail</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address.</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username, and password</string>
    <string name="login_error_title">Oops!</string>
    <string name="logout_title">Logout</string>
    <string name="no_messages">No new messages :(</string>
    <string name="no_friends">Add Friends!</string>
    <string name="edit_title">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_label">We\'re Sorry</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry there was an error</string>
    <string name="video_size_warning">The selected video must be less than 10 MB</string>
    <string name="file_error">There was a problem with the selected file</string>
    <string name="file_size_error">The selected file is too large. Select a new file.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected, please select a different file.</string>
    <string name="success_message">Message sent!</string>
    <string name="error_send">Error sending message, please try again.</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="content_desc_bg">Ribbit Frog Background Image</string>
    <string name="subtitle">A Spike Lee Joint</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_divider">button divider</string>
    <string name="content_desc_messIcon">Message icon</string>
    <string name="content_desc_avatar">user avatar</string>
    <string name="content_desc_user_checkmark">editFriends checkmark</string>
    <string name="push_message">You have a new Ribbit message from %s!</string>

</resources>
