<RelativeLayout style="@style/AuthBackground"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.teamtreehouse.ribbit.ui.SignUpActivity">

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"
        android:text="@string/subtitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthLayout">

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthInput"
            android:hint="@string/username_hint">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/emailField"
            style="@style/AuthInput"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthInput"
            android:hint="@string/password_hint"

            android:inputType="textPassword"/>


    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_divider"/>

    <Button
        android:id="@+id/signupButton"
        android:text="@string/sign_up_button_label"
        style="@style/AuthButton"
        android:layout_below="@id/editTextLayout"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="0dp"
        android:layout_toLeftOf="@id/buttonDivider"/>

    <Button
        android:id="@+id/cancelButton"
        android:text="@string/cancel_button_label"
        style="@style/AuthButton"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"
        android:layout_below="@id/editTextLayout"/>


</RelativeLayout>
